# unifi-dashboard

./: .env.example  .gitignore  CODEOWNERS  LICENSE  README.md  api.md  changelog.md  codex-plan.md  docker-compose.yml  issues.md  roadmap.md
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 001_initial_schema.py  002_cve_threatfeed_settings.py  003_ids_config_raw_json.py  004_firewall_port_forwards.py  005_nullable_group_unifi_id.py  006_fix_group_unifi_id_nullable.py  007_group_unifi_nullable.py  008_threat_feed_direction.py  009_widen_unifi_id.py  010_add_users_table.py  011_add_user_theme.py  012_add_threat_feed_source_type.py  013_add_notification_state.py  014_add_assessment_runs.py
services/api/app/: audit.py  auth.py  config.py  database.py  main.py
services/api/app/collectors/: assessment_history.py  cve_collector.py  poller.py  retention.py  syslog.py  threat_feed_collector.py
services/api/app/models/: __init__.py  assessment.py  cve.py  firewall.py  network.py  notification.py  scan.py  settings.py  threat.py  threatfeed.py  user.py
services/api/app/routers/: assessment.py  auth_setup.py  cve.py  dashboard.py  drift.py  firewall.py  health.py  metrics.py  (+6 more)
services/api/tests/: conftest.py  test_assessment_evidence.py  test_assessment_history.py  test_dashboard_attention.py  test_feed_hits.py  test_firewall_logs.py  test_ids_normalisation.py  test_metrics.py  test_notification_migration.py  test_notification_settings.py  test_notifier.py  test_retention.py  test_threat_feed_zones.py
(+74 files in other folders)
