[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unifi-dashboard-api"
version = "0.0.0" # placeholder — release version comes from the git tag (see docker-publish.yml)
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "fastapi-users[sqlalchemy]>=13.0",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.9",
  "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
